# ipp_panoptic_mapping

./: CMakeLists.txt  README.md  common.py
evaluation/panoptic_mapping/: constants.py  evaluate_and_compare_multiple_runs.py  evaluate_and_compare_runs.py  evaluate_run.py  evaluate_single_run.py  metrics.py  pano_pcd_evaluator.py  pointcloud.py  remap_pointcloud_labels.py  scannet_utils.py  segment_matching.py  (+1 more)
panoptic_mapping_evaluation/: CMakeLists.txt  constants.py  create_labeled_pointcloud_from_scan_groundtruth.py  create_pointcloud_from_scan_groundtruth.py  create_voxel_segs.sh  evaluate_and_compare_runs.py  evaluate_panoptic_pointclouds.py  evaluate_run.py  evaluate_run_v2.py  graphing.py  metrics.py  pointcloud.py  pointcloud_utils.py  remap_pointcloud_labels.py  scannet_to_pano_pcd.py  scannet_utils.py  utils.py  vis.py  vis_utils.py  visualize_metrics.py
panoptic_segmentation/: predictors.py
panoptic_segmentation_evaluation/: create_scannet_panoptic_maps.py  eval_single_image_pq.py  evaluate_sequence.py  vis_pano_seg.py  visualize_metrics.ipynb
panoptic_segmentation_utils/: vis_pano_seg.py
scripts/: create_voxel_segs.sh  prepare_scan.sh
tools/: create_detectron_pano_seg_labels.py  create_labeled_pointcloud_from_scan_groundtruth.py  create_pano_pcd_from_scan_gt.py  create_pano_pcd_gt_labels_csv.py  create_scannet_panoptic_maps.py  create_temporally_consistent_panoptic_maps.py  plot_evaluation_metrics.py  remap_pointcloud_labels.py  scannet_utils.py  visualize_predicted_labels_on_mesh.py
utils/: common.py  graphing.py  pano_seg.py  visualization.py
(+10 files in other folders)
